--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     />
     <title>Aardvark</title>
   </head>
-  <body class="h-full">
+  <body class="">
+    <!-- <body class="h-full"> -->
     <div
       id="app"
-      class="mx-4 mt-11 h-full max-w-screen-2xl font-pop sm:mx-8 md:mx-12 2xl:mx-auto 2xl:px-[100px]"
+      class="mx-4 mt-6 h-full max-w-screen-2xl font-pop sm:mx-8 md:mx-12 2xl:mx-auto 2xl:px-[100px]"
     ></div>
     <script type="module" src="/src/main.js"></script>
   </body>
