--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
       id="app"
       class="mx-4 mt-6 h-full max-w-screen-2xl font-pop sm:mx-8 md:mx-12 2xl:mx-auto 2xl:px-[100px]"
     ></div>
+    <div class="px-[12px] mb-[30px] bg-[#ffffff14]  mx-auto text-center">
+      <div class="mx-auto text-center p-[8px] max-w-screen-2xl sm:mx-8 md:mx-12 2xl:mx-auto 2xl:px-[100px]  text-center md:flex items-center justify-between">
+        <span>Copyright © 2020. LogoIpsum. All rights reserved.</span>
+        <div class="mt-[12px] md:mt-[0px] flex justify-center ">
+          <img src="./src/assets/twitter.svg" alt="aadvark" class="w-[40px] h-[40px] mr-4"/>
+          <img src="./src/assets/discord.png" alt="aadvark" class="w-[40px] h-[40px] mr-4"/>
+          <img src="./src/assets/github.png" alt="aadvark" class="w-[40px] h-[40px]"/>
+        </div>
+      </div>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
