--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
       id="app"
       class="mx-4 mt-6 h-full max-w-screen-2xl font-pop sm:mx-8 md:mx-12 2xl:mx-auto 2xl:px-[100px]"
     ></div>
-    <div class="px-[12px] mb-[30px] bg-[#ffffff14]  mx-auto text-center">
-      <div class="mx-auto text-center p-[8px] max-w-screen-2xl sm:mx-8 md:mx-12 2xl:mx-auto 2xl:px-[100px]  text-center md:flex items-center justify-between">
+    <div class="mx-auto mb-[30px] bg-[#ffffff14] px-[12px] text-center">
+      <div
+        class="mx-auto max-w-screen-2xl items-center justify-between p-[8px] text-center text-center sm:mx-8 md:mx-12 md:flex 2xl:mx-auto 2xl:px-[100px]"
+      >
         <span>Copyright © 2020. LogoIpsum. All rights reserved.</span>
-        <div class="mt-[12px] md:mt-[0px] flex justify-center ">
-          <img src="./src/assets/twitter.svg" alt="aadvark" class="w-[40px] h-[40px] mr-4"/>
-          <img src="./src/assets/discord.png" alt="aadvark" class="w-[40px] h-[40px] mr-4"/>
-          <img src="./src/assets/github.png" alt="aadvark" class="w-[40px] h-[40px]"/>
+        <div class="mt-[12px] flex justify-center md:mt-[0px]">
+          <img src="./src/assets/twitter.svg" alt="aadvark" class="mr-4 h-[40px] w-[40px]" />
+          <img src="./src/assets/discord.png" alt="aadvark" class="mr-4 h-[40px] w-[40px]" />
+          <img src="./src/assets/github.png" alt="aadvark" class="h-[40px] w-[40px]" />
         </div>
       </div>
     </div>
