--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     ></div>
     <div class="mx-auto mb-[30px] bg-[#ffffff14] px-[12px] text-center">
       <div
-        class="mx-auto max-w-screen-2xl items-center justify-between p-[8px] text-center text-center sm:mx-8 md:mx-12 md:flex 2xl:mx-auto 2xl:px-[100px]"
+        class="mx-auto max-w-screen-2xl items-center justify-between p-[8px] text-center sm:mx-8 md:mx-12 md:flex 2xl:mx-auto 2xl:px-[100px]"
       >
         <span>Copyright © 2020. LogoIpsum. All rights reserved.</span>
         <div class="mt-[12px] flex justify-center md:mt-[0px]">
