fix: privacy policy

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
       >
         <span>Copyright © 2020. LogoIpsum. All rights reserved.</span>
         <div class="mt-[12px] flex justify-center md:mt-[0px]">
-          <img src="./src/assets/twitter.svg" alt="aadvark" class="mr-4 h-[40px] w-[40px]" />
-          <img src="./src/assets/discord.png" alt="aadvark" class="mr-4 h-[40px] w-[40px]" />
+          <a href="https://twitter.com/Aard_Tech"
+            ><img src="./src/assets/twitter.svg" alt="aadvark" class="mr-4 h-[40px] w-[40px]"
+          /></a>
+          <a href="https://discord.com/invite/ME56FFeTJN"
+            ><img src="./src/assets/discord.png" alt="aadvark" class="mr-4 h-[40px] w-[40px]"
+          /></a>
           <img src="./src/assets/github.png" alt="aadvark" class="h-[40px] w-[40px]" />
         </div>
       </div>
