--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a href="https://discord.com/invite/ME56FFeTJN"
             ><img src="./src/assets/discord.png" alt="aadvark" class="mr-4 h-[40px] w-[40px]"
           /></a>
-          <img src="./src/assets/github.png" alt="aadvark" class="h-[40px] w-[40px]" />
+          <a><img src="./src/assets/github.png" alt="aadvark" class="h-[40px] w-[40px]" /></a>
         </div>
       </div>
     </div>
