--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- <body class="h-full"> -->
     <div
       id="app"
-      class="mx-4 mt-6 h-full max-w-screen-2xl font-pop sm:mx-8 md:mx-12 2xl:mx-auto 2xl:px-[100px]"
+      class=""
     ></div>
 
     <div class="mx-auto mb-[30px] bg-[#ffffff14] px-[12px] text-center">
