yarn repair files

--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
   </head>
   <body class="">
     <!-- <body class="h-full"> -->
-    <div
-      id="app"
-      class=""
-    ></div>
+    <div id="app" class=""></div>
 
     <div class="mx-auto mb-[30px] bg-[#ffffff14] px-[12px] text-center">
       <div
